# webcrawler

Coding/: CMakeLists.txt
Coding/allocFile/: fileControl.cpp  fileControl.h
Coding/bookParse/: bookParse.cpp  bookParse.h
Coding/download/: downloadControl.cpp  downloadControl.h
Coding/imageParse/: imageParse.cpp  imageParse.h
Coding/main/: CMakeLists.txt  main.cpp
Coding/parseControl/: parseBase.cpp  parseBase.h  parseCtrl.cpp  parseCtrl.h
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  webcrawler
debug/main/: Makefile  cmake_install.cmake
